hphp/hack/test/typecheck/string_interpolation/str_interp_backslash.php
<?hh // strict

function main():void{
  $a = "${HH\is_any_array('')}";
}
